# bsc_thesis

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
coef/: Cargo.toml
coef/src/: main.rs
eval/: Cargo.toml
eval/src/: lib.rs  main.rs
lib/: Cargo.toml
lib/src/: def.rs  lib.rs  tau.rs  tau_h.rs  tau_w.rs  weights.rs
plots/: synth-dist.R  synth-heat.R
solutions/: Cargo.toml
solutions/src/: lib.rs  ref_solver.rs  rsim.rs  rtc.rs
solver/: Cargo.toml
solver/src/: bf_cli.rs  cli.rs  def.rs  lib.rs  main.rs
solver/src/bounds/: algo.rs  bf.rs  mod.rs
verifier/: Cargo.toml
verifier/src/: comp.rs  lib.rs  main.rs  parsing.rs  runner.rs  verify.rs
