[package]
name = "coef"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
indicatif = { version = "0.17.11", features = ["rayon"] }
serde = "1.0.219"
serde_derive = "1.0.219"
rayon = "1.10.0"
clap = "4.5.39"
clap_derive = "4.5.32"
anyhow = "1.0.98"
glob = "0.3.2"
# own crates
solver = { path = "../solver/" }
verifier = { path = "../verifier/" }
solutions = { path = "../solutions/" }

