[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tau"
path = "src/tau.rs"

[dependencies]
rayon = "1.10.0"
clap = "4.5.39"
clap_derive = "4.5.32"
anyhow = "1.0.98"
serde = "1.0.219"
serde_derive = "1.0.219"
csv = "1.3.1"
glob = "0.3.2"
regex = "1.11.1"
kendalls = "1.0.0"
itertools = "0.14.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
