[package]
name = "solutions"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rtc" # ranks-to-cases
path = "src/rtc.rs"

[[bin]]
name = "rsim" # rank simulation
path = "src/rsim.rs"

[dependencies]
rayon = "1.10.0"
clap = "4.5.39"
clap_derive = "4.5.32"
anyhow = "1.0.98"
serde = "1.0.219"
serde_derive = "1.0.219"
csv = "1.3.1"
solver = { path = "../solver/"}
indicatif = { version = "0.17.11", features = ["rayon"]}
glob = "0.3.2"
